# sawyer_robot_ros2

./: .gitignore  params_1.yaml  readme2.md
intera_core_msgs/: CMakeLists.txt
intera_core_msgs/msg/: AnalogIOState.msg  CollisionAvoidanceState.msg  DigitalIOState.msg  EndpointState.msg  EndpointStates.msg  HeadPanCommand.msg  HeadState.msg  IOComponentCommand.msg  IODeviceConfiguration.msg  IODeviceStatus.msg  IONodeConfiguration.msg  IONodeStatus.msg  InteractionControlCommand.msg  InteractionControlState.msg  RobotAssemblyState.msg  SEAJointState.msg  URDFConfiguration.msg
intera_tools_description/meshes/dental_drill/: boring_handpiece_wSawyerMount_MeterUnits.stl
intera_tools_description/urdf/dental_drill/: dental_drill.xacro
robot_library_py/: CMakeLists.txt
robot_library_py/parse_urdf/: CMakeLists.txt
robot_library_py/parse_urdf/_core/: cpp_library.cpp
robot_library_py/tests/: parse_urdf_test.py
sawyer_description/: CMakeLists.txt  package.xml
sawyer_description/launch/: view_sawyer.launch.py
sawyer_description/meshes/sawyer_pv/: Cbase.DAE.dae
sawyer_description/rviz/: view_robot.rviz
sawyer_description/urdf/: full_sawyer.urdf.xacro  mesh_sim_full_sawyer.urdf.xacro  sawyer.urdf  sawyer.urdf.xacro  sawyer_base.gazebo.xacro  sawyer_base.urdf.xacro  sawyer_dental_drill.urdf.xacro
sawyer_moveit_config/: CMakeLists.txt  package.xml
sawyer_moveit_config/config/: kinematics.yaml  ros2_controllers.yaml  sawyer_parameters.yaml
sawyer_moveit_config/launch/: moveit.launch.py
sawyer_moveit_config/rviz/: moveit.rviz
sawyer_moveit_config/srdf/: full_sawyer.srdf.xacro
sawyer_robot/: package.xml
sawyer_robot_driver/: CMakeLists.txt  package.xml  sawyer_robot_driver_plugin_description.xml
sawyer_robot_driver/include/sawyer_robot_driver/: sawyer_robot_driver.hpp
sawyer_robot_driver/include/sim_sawyer_robot_driver/: sim_sawyer_robot_driver.hpp
sawyer_robot_driver/src/: sawyer_robot_driver.cpp  sim_sawyer_robot_driver.cpp
src/: README.md
src/intera_core_msgs/: CMakeLists.txt
src/intera_core_msgs/msg/: IOComponentCommand.msg
src/intera_tools_description/: CMakeLists.txt  package.xml
src/robot_library_py/parse_urdf/: __init__.py
src/sawyer_description/: CMakeLists.txt  package.xml
src/sawyer_description/launch/: view_sawyer.launch.py
src/sawyer_description/meshes/sawyer_pv/: Chead.DAE.dae
src/sawyer_description/urdf/: sawyer_base.urdf.xacro  sim_full_sawyer.urdf.xacro
src/sawyer_moveit_config/: CMakeLists.txt
src/sawyer_moveit_config/config/: ros2_controllers.yaml  sawyer_parameters.yaml
src/sawyer_moveit_config/launch/: moveit.launch.py
src/sawyer_moveit_config/srdf/: full_sawyer.srdf.xacro
src/sawyer_robot/: CMakeLists.txt  package.xml
src/sawyer_robot_driver/: package.xml  sim_sawyer_robot_driver_plugin_description.xml
src/sawyer_robot_driver/include/sawyer_robot_driver/: sawyer_robot_driver.hpp
src/sawyer_robot_driver/include/sim_sawyer_robot_driver/: sim_sawyer_robot_driver.hpp
src/teleop_script/: android_as_joy.py  android_as_joy_old.py  android_as_joy_zmq.py  block_bc_rnn.json  camera_node.py  cameras2.ipynb  dbg.ipynb  dbg_cam.py  demo2hdf5.ipynb  demo2video.py  demos2hdf5.py  demosgroup2hdf5.py  goto_posture.ipynb  hdf5_mod.ipynb  infer_live.ipynb  infer_live2.ipynb  infer_live_spoon.ipynb  infer_offline.ipynb  live_infer.ipynb  multiple_demonstrations.h5  play_sawyer_demo_on_real.ipynb  play_sawyer_demo_on_sim.ipynb  posture_set_play.ipynb  posture_spoon.ipynb  pub_dbg.py  read_demo.ipynb  record_data.ipynb  record_data.py  robot_ee_jp_ctrl.ipynb  robot_ee_jp_ctrl_real.ipynb  robot_utils.py  rotm2euler.py  teleop.py  train0sawyer_block.ipynb  utils_camera.py  utils_ros.py  view_demo.py
src/teleop_script/android_robosuite/: android_spinner.py  readme.md
