<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sawyer_moveit_config</name>
    <version>5.3.0</version>
    <description>
        All the configuration and launch files for using the Sawyer
        robot with the MoveIt Motion Planning Framework
    </description>

    <author>Ian McMahon</author>
    <maintainer email="rsdk.support@rethinkrobotics.com">
        Rethink Robotics Inc.
    </maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_trajectory_controller</exec_depend>
    <exec_depend>moveit</exec_depend>
    <exec_depend>moveit_ros_control_interface</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>sawyer_description</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
