<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sawyer_robot_driver</name>
  <version>0.0.0</version>
  <description>
    Hardware driver for tutorial robot
  </description>
  <author>Paul Gesel</author>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>intera_core_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
