<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sawyer_description</name>
    <version>5.3.0</version>
    <description>
        Description of Sawyer Robot from Rethink Robotics.
        This package contains the URDF and meshes describing Saw
    </description>
    <maintainer email="rsdk.support@rethinkrobotics.com">
        Rethink Robotics Inc.
    </maintainer>
    <license>Apache 2.0</license>
    <author>Rethink Robotics Inc.</author>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
