<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sawyer_robot</name>
    <version>5.3.0</version>
    <description>
        sawyer_robot metapackage for all of the packages required
        to work with the Sawyer Robot from Rethink Robotics.
    </description>
    <maintainer email="rsdk.support@rethinkrobotics.com">
        Rethink Robotics Inc.
    </maintainer>
    <license>Apache 2.0</license>
    <author>Rethink Robotics Inc.</author>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>sawyer_robot_driver</exec_depend>
    <exec_depend>sawyer_moveit_config</exec_depend>
    <exec_depend>sawyer_description</exec_depend>
    <exec_depend>intera_tools_description</exec_depend>
    <exec_depend>intera_core_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>